--- a/src/main/resources/templates/formRatingReservation.html
+++ b/src/main/resources/templates/formRatingReservation.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns="http:///www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
-    <title>Actualizar Admin</title>
+    <title>Calificar Reserva</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -14,19 +14,23 @@
   </head>
 
   <body>
+    <button type="button" onclick="location.href='/formReservation'">
+      Regresar
+    </button>
+
+    <h4>Calificacion de Reserva</h4>
+    <hr />
+
     <!-- Formulario -->
     <div class="centrar">
       <form
-        th:action="@{/formAdmin/update/save}"
+        th:object="${rating}"
+        th:action="@{/formReservation/rate/save}"
         method="post"
-        th:object="${admin}"
       >
-        <br />
-        <h3>Editar Administrador</h3>
-        <hr />
         <fieldset>
           <!-- Log de erorres de validacion-->
-          <div th:object="${admin}" class="errorblock">
+          <div th:object="${rating}" class="errorblock">
             <ul
               th:if="${#fields.hasErrors('*')}"
               class="alert alert-danger"
@@ -40,53 +44,41 @@
             </ul>
           </div>
           <caption>
-            Datos del Administrador
+            Datos de la Calificación, solo puede enviar una por reserva*
           </caption>
           <table class="form">
             <tr>
               <div class="form-group">
-                <td><label for="nombre">Nombre del Administrador</label></td>
+                <td><label for="rate">Calificacion</label></td>
+
                 <td>
                   <input
-                    th:field="*{name}"
-                    id="nombre_admin"
-                    placeholder="Escribe tu nombre"
+                    th:field="*{rate}"
+                    id="rate"
+                    type="range"
+                    class="form-control"
+                    oninput="document.getElementById('txt-rate').value=value"
+                    min="1"
+                    max="5"
+                  />
+                  <output id="txt-rate" name="txt-rate">1</output>
+                </td>
+              </div>
+            </tr>
+            <tr>
+              <div class="form-group">
+                <td>
+                  <label for="message_body">Mensaje</label>
+                </td>
+                <td>
+                  <textarea
+                    th:field="*{message}"
+                    id="message"
                     type="text"
+                    placeholder="¿Cómo fue su experiencia en la reservación? Cuentenos."
                     class="form-control"
-                  />
-                </td>
-              </div>
-            </tr>
-
-            <tr>
-              <div class="form-group">
-                <input type="hidden" th:field="*{id}" />
-
-                <td><label for="nombre">Email del Administrador</label></td>
-                <td>
-                  <input
-                    th:field="*{email}"
-                    id="email_admin"
-                    placeholder="Escribe tu e-mail"
-                    type="email"
-                    class="form-control"
-                  />
-                </td>
-              </div>
-            </tr>
-            <tr>
-              <div class="form-group">
-                <td>
-                  <label for="nombre">Contraseña del Administrador</label>
-                </td>
-                <td>
-                  <input
-                    th:field="*{password}"
-                    id="psswd_admin"
-                    placeholder="Escribe la contraseña"
-                    type="password"
-                    class="form-control"
-                  />
+                    rows="5"
+                  ></textarea>
                 </td>
               </div>
             </tr>
@@ -94,20 +86,25 @@
             <!-- Botones -->
 
             <td>
-              <button class="btn btn-success" title="Guardar" type="submit">
-                Actualizar
-              </button>
+              <div th:if="${points == -1}">
+                <button class="btn btn-success" title="Guardar" type="submit">
+                  Registrar Calificacion
+                </button>
+              </div>
+
+              <div th:if="${points == 0}">
+                <small>Parece que ya has calificado esta reserva</small>
+              </div>
             </td>
 
             <td>
-              <button class="btn btn-info" title="Deshacer" type="reset">
-                Deshacer
+              <button class="btn btn-warning" title="Limpiar" type="reset">
+                Limpiar los campos
               </button>
             </td>
           </table>
         </fieldset>
       </form>
     </div>
-    <br />
   </body>
 </html>
