--- a/src/main/resources/templates/formReservation.html
+++ b/src/main/resources/templates/formReservation.html
@@ -2,92 +2,159 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-<meta charset="UTF-8">
-<script type="text/javascript"
-	src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script type="text/javascript" src="/js/functions_reservation.js"></script>
-<title>Reservas con sus calificaciones</title>
+  <meta charset="UTF-8" />
+  <title>Reservas</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <link type="text/css" rel="stylesheet" href="/Css/styles.css" />
 </head>
 
 <body>
-<button type="button" onclick="location.href='/'">Regresar</button>
-	<h3>Formulario Reservas</h3>
-	<hr>
-	<fieldset style="width: 18%;">
+  <button type="button" onclick="location.href='/'">Regresar</button>
 
-		<legend>~ Formulario ~</legend>
-		<table>
+  <h4>Formulario de Reservas</h4>
+  <hr />
 
+  <!-- Formulario -->
+  <div class="centrar">
+    <form th:object="${reservation}" th:action="@{/formReservation/save}" method="post">
+      <fieldset>
+        <!-- Log de erorres de validacion-->
+        <div th:object="${reservation}" class="errorblock">
+          <ul th:if="${#fields.hasErrors('*')}" class="alert alert-danger" role="alert">
+            <li th:each="error: ${#fields.errors('*')}" th:text="${error}" style="margin-left: 20px"></li>
+          </ul>
+        </div>
+        <caption>
+          Datos de la Reserva
+        </caption>
+        <table class="form">
+          <tr>
+            <div class="form-group">
+              <td><label for="devolutionDate">Fecha de entrega</label></td>
+              <td>
+                <input th:field="*{devolutionDate}" id="devolutionDate" type="date" class="form-control" />
+              </td>
+            </div>
+          </tr>
 
-			<tr>
-				<th> Fecha de entrega </th>
-				<td><input type="date" style="margin-left: 20px"
-					id="devolution_date"></td>
+          <tr>
+            <div class="form-group">
+              <td>
+                <label for="client">Cliente</label>
+              </td>
+              <td>
+                <select id="client_msg" name="client">
+                  <option th:each="c: ${clientes}" th:value="${c.idClient}" th:text="${c.name}"></option>
+                </select>
+              </td>
+            </div>
+          </tr>
 
-			</tr>
+          <tr>
+            <div class="form-group">
+              <td>
+                <label for="cabin">Cabaña</label>
+              </td>
+              <td>
+                <select id="cabin_msg" name="cabin">
+                  <option th:each="cabin: ${cabanas}" th:value="${cabin.id}" th:text="${cabin.name}"></option>
+                </select>
+              </td>
+            </div>
+          </tr>
 
-			<tr>
-				<th> Cliente </th>
-					<td><select style="margin-left: 20px" id="client">
-						<option th:each="client: ${clientes}" 
-						th:value="${client.idClient}" 
-						th:text="${client.name}">
-						</option>
-					</select></td>
-			<tr>
-			<tr>
-				<th> Cabaña </th>
-					<td><select style="margin-left: 20px" id="cabin">
-						<option th:each="cabin: ${cabanas}" 
-						th:value="${cabin.id}" 
-						th:text="${cabin.name}">
-						</option>
-					</select></td>
-			<tr>
-				<td>
-					<button type="button"
-						onclick="agregarReserva($('#devolution_date'),$('#client'),$('#cabin'))">Agregar
-						Reserva</button>
-				</td>
-			</tr>
+          <!-- Botones -->
 
-		</table>
-	</fieldset>
+          <td>
+            <button class="btn btn-success" title="Guardar" type="submit">
+              Registrar Reserva
+            </button>
+          </td>
 
+          <td>
+            <button class="btn btn-warning" title="Limpiar" type="reset">
+              Limpiar los campos
+            </button>
+          </td>
+        </table>
+      </fieldset>
+    </form>
+  </div>
+  <br />
 
+  <div class="centrar">
+    <div th:if="${reservas != null and !reservas.empty}">
+      <h4>Lista de Reservas</h4>
+      <hr />
+      <table class="table">
+        <tr>
+          <th style="background-color: darksalmon">
+            <center><b>CABAÑA</b></center>
+          </th>
+          <th style="background-color: darksalmon">
+            <center><b>MARCA</b></center>
+          </th>
+          <th style="background-color: darksalmon">
+            <center><b>DEVOLUCIÓN</b></center>
+          </th>
+          <th style="background-color: darksalmon">
+            <center><b>ESTADO</b></center>
+          </th>
 
+          <th style="background-color: darksalmon">
+            <center><b>CLIENTE</b></center>
+          </th>
+          <th style="background-color: darksalmon">
+            <center><b>EMAIL</b></center>
+          </th>
+          <th style="background-color: darksalmon">
+            <b>&#9733;
+            </b>
+          </th>
+          <th colspan="2" style="background-color: brown"><b>
+            <center><b>PUNTUACIÓN</b></center>
+          </b></th>
 
+          <th colspan="2" style="background-color: crimson">
+            <b></b>
+            <center><b>RESERVA</b></center>
+          </th>
+          <th style="background-color: darksalmon"><b></b></th>
+        </tr>
 
-	<div th:if="${reservas != null and !reservas.empty}">
-		<h3>Lista de reservas</h3>
-	<hr>
-		<table border="2">
-			<tr>
-				<th style="background-color: darksalmon;"><b>ID</b></th>
-				<th style="background-color: darksalmon;"><b>NOMBRE CABAÑA</b></th>
-				<th style="background-color: darksalmon;"><b>MARCA</b></th>
-				<th style="background-color: darksalmon;"><b>ID CLIENTE</b></th>
-				<th style="background-color: darksalmon;"><b>NOMBRE CLIENTE</b></th>
-				<th style="background-color: darksalmon;"><b>EMAIL</b></th>
-				<th style="background-color: darksalmon;"><b>PUNTUACIÓN CABAÑA</b></th>
-			</tr>
+        <tr th:each="r: ${reservas}">
+          <td th:text="${r.cabin.name}"></td>
+          <td th:text="${r.cabin.brand}"></td>
+          <td th:text="${#strings.substring(r.devolutionDate,0,10)}"></td>
+          <td th:text="${r?.status}"></td>
+          <td th:text="${r.client.name}"></td>
+          <td th:text="${r.client.email}"></td>
+          <td><span th:text="${r?.score?.rate}"></span></td>
 
-			<tr th:each="r: ${reservas}">
-				<td th:text="${r.idReservation}"></td>
-				<td th:text="${r.cabin.name}"></td>
-				<td th:text="${r.cabin.brand}"></td>
-				<td th:text="${r.client.idClient}"></td>
-				<td th:text="${r.client.name}"></td>
-				<td th:text="${r.client.email}"></td>
-				<td><span th:text="${r?.score?.rate}"></span></td>
-			</tr>
-		</table>
-	</div>
+          <td>
+            <a th:href="@{/formReservation/rate/}+${r.idReservation}" th:text="AGREGAR"></a>
+          </td>
+          <td>
+            <a th:href="@{/formReservation/rate/update/}+${r?.score?.id}" th:text="EDITAR"></a>
+          </td>
 
-	<div th:if="${reservas == null or reservas.empty}">
-		<h3>No hay reservas que mostrar.</h3>
-	</div>
+          <td>
+            <a th:href="@{/formReservation/delete/}+${r.idReservation}" th:text="ELIMINAR"></a>
+          </td>
+
+          <td>
+            <a th:href="@{/formReservation/update/}+${r.idReservation}" th:text="MODIFICAR"></a>
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div th:if="${reservas == null or reservas.empty}">
+      <h4>No hay Reservas que mostrar</h4>
+      <hr />
+    </div>
+  </div>
 </body>
 
 </html>
-
