--- a/src/main/resources/templates/updateMsg.html
+++ b/src/main/resources/templates/updateMsg.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns="http:///www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
-    <title>Actualizar Admin</title>
+    <title>Editar mensaje</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -14,19 +14,21 @@
   </head>
 
   <body>
+    <button type="button" onclick="location.href='/formMsg'">Regresar</button>
+
+    <h4>Actualizar Mensaje</h4>
+    <hr />
+
     <!-- Formulario -->
     <div class="centrar">
       <form
-        th:action="@{/formAdmin/update/save}"
+        th:object="${message}"
+        th:action="@{/formMsg/update/save}"
         method="post"
-        th:object="${admin}"
       >
-        <br />
-        <h3>Editar Administrador</h3>
-        <hr />
         <fieldset>
           <!-- Log de erorres de validacion-->
-          <div th:object="${admin}" class="errorblock">
+          <div th:object="${message}" class="errorblock">
             <ul
               th:if="${#fields.hasErrors('*')}"
               class="alert alert-danger"
@@ -40,53 +42,25 @@
             </ul>
           </div>
           <caption>
-            Datos del Administrador
+            Solo puede actualizar el cuerpo del mensaje*
           </caption>
           <table class="form">
             <tr>
               <div class="form-group">
-                <td><label for="nombre">Nombre del Administrador</label></td>
                 <td>
-                  <input
-                    th:field="*{name}"
-                    id="nombre_admin"
-                    placeholder="Escribe tu nombre"
+                  <input type="hidden" th:field="*{idMessage}" />
+                  <input type="hidden" th:field="*{cabin}" />
+                  <input type="hidden" th:field="*{client}" />
+                  <label for="message_body">Mensaje</label>
+                </td>
+                <td>
+                  <textarea
+                    th:field="*{messageText}"
+                    id="messageBody"
                     type="text"
+                    placeholder="Escriba el mensaje aqui"
                     class="form-control"
-                  />
-                </td>
-              </div>
-            </tr>
-
-            <tr>
-              <div class="form-group">
-                <input type="hidden" th:field="*{id}" />
-
-                <td><label for="nombre">Email del Administrador</label></td>
-                <td>
-                  <input
-                    th:field="*{email}"
-                    id="email_admin"
-                    placeholder="Escribe tu e-mail"
-                    type="email"
-                    class="form-control"
-                  />
-                </td>
-              </div>
-            </tr>
-            <tr>
-              <div class="form-group">
-                <td>
-                  <label for="nombre">Contraseña del Administrador</label>
-                </td>
-                <td>
-                  <input
-                    th:field="*{password}"
-                    id="psswd_admin"
-                    placeholder="Escribe la contraseña"
-                    type="password"
-                    class="form-control"
-                  />
+                  ></textarea>
                 </td>
               </div>
             </tr>
@@ -98,7 +72,6 @@
                 Actualizar
               </button>
             </td>
-
             <td>
               <button class="btn btn-info" title="Deshacer" type="reset">
                 Deshacer
