--- a/src/main/resources/templates/updateRatingForm.html
+++ b/src/main/resources/templates/updateRatingForm.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
-    <title>Editar Categoria</title>
+    <title>Editar Calificación Reserva</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -14,67 +14,56 @@
   </head>
 
   <body>
-    <button type="button" onclick="location.href='/formCategory'">
+    <button type="button" onclick="location.href='/formReservation'">
       Regresar
     </button>
 
-    <h4>Actualizar Categoria</h4>
+    <h4>Calificacion de Reserva</h4>
     <hr />
 
     <!-- Formulario -->
     <div class="centrar">
       <form
-        th:object="${category}"
-        th:action="@{/formCategory/update/save}"
+        th:object="${revervationRating}"
+        th:action="@{/formReservation/rate/update/save}"
         method="post"
       >
         <fieldset>
-          <!-- Log de erorres de validacion-->
-          <div th:object="${category}" class="errorblock">
-            <ul
-              th:if="${#fields.hasErrors('*')}"
-              class="alert alert-danger"
-              role="alert"
-            >
-              <li
-                th:each="error: ${#fields.errors('*')}"
-                th:text="${error}"
-                style="margin-left: 20px"
-              ></li>
-            </ul>
-          </div>
           <caption>
-            Datos de la Categoria
+            Datos de la Calificación
           </caption>
           <table class="form">
             <tr>
               <div class="form-group">
                 <input type="hidden" th:field="*{id}" />
-
-                <td><label for="nombre">Nombre de la Categoria</label></td>
+                <td><label for="rate">Calificacion</label></td>
                 <td>
                   <input
-                    th:field="*{name}"
-                    id="name_category"
-                    placeholder="Escriba el nombre"
-                    type="text"
+                    th:field="*{rate}"
+                    id="rate"
+                    type="range"
                     class="form-control"
+                    oninput="document.getElementById('txt-rate').value=value"
+                    min="1"
+                    max="5"
                   />
+                  <output id="txt-rate" name="txt-rate">1</output>
                 </td>
               </div>
             </tr>
             <tr>
               <div class="form-group">
                 <td>
-                  <label for="descripcion">Descripcion</label>
+                  <label for="message_body">Mensaje</label>
                 </td>
                 <td>
                   <textarea
-                    th:field="*{description}"
-                    id="description_category"
+                    th:field="*{message}"
+                    id="message"
                     type="text"
-                    placeholder="Escriba la descripción aqui"
+                    placeholder="¿Cómo fue su experiencia en la reservación? Cuentenos."
                     class="form-control"
+                    rows="5"
                   ></textarea>
                 </td>
               </div>
@@ -84,13 +73,13 @@
 
             <td>
               <button class="btn btn-success" title="Guardar" type="submit">
-                Actualizar
+                Registrar Calificacion
               </button>
             </td>
 
             <td>
-              <button class="btn btn-info" title="Deshacer" type="reset">
-                Deshacer
+              <button class="btn btn-warning" title="Limpiar" type="reset">
+                Limpiar los campos
               </button>
             </td>
           </table>
