--- a/src/main/resources/templates/updateReservation.html
+++ b/src/main/resources/templates/updateReservation.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns="http:///www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
-    <title>Actualizar Admin</title>
+    <title>Editar Reserva</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -14,19 +14,23 @@
   </head>
 
   <body>
+    <button type="button" onclick="location.href='/formReservation'">
+      Regresar
+    </button>
+
+    <h4>Actualizar Reserva</h4>
+    <hr />
+
     <!-- Formulario -->
     <div class="centrar">
       <form
-        th:action="@{/formAdmin/update/save}"
+        th:object="${reservation}"
+        th:action="@{/formReservation/update/save}"
         method="post"
-        th:object="${admin}"
       >
-        <br />
-        <h3>Editar Administrador</h3>
-        <hr />
         <fieldset>
           <!-- Log de erorres de validacion-->
-          <div th:object="${admin}" class="errorblock">
+          <div th:object="${reservation}" class="errorblock">
             <ul
               th:if="${#fields.hasErrors('*')}"
               class="alert alert-danger"
@@ -40,18 +44,19 @@
             </ul>
           </div>
           <caption>
-            Datos del Administrador
+            Datos de la Reserva
           </caption>
           <table class="form">
             <tr>
               <div class="form-group">
-                <td><label for="nombre">Nombre del Administrador</label></td>
+                <input type="hidden" th:field="*{idReservation}" />
+                <input type="hidden" th:field="*{startDate}" />
+                <td><label for="devolutionDate">Fecha de entrega</label></td>
                 <td>
                   <input
-                    th:field="*{name}"
-                    id="nombre_admin"
-                    placeholder="Escribe tu nombre"
-                    type="text"
+                    th:field="*{devolutionDate}"
+                    id="devolutionDate"
+                    type="date"
                     class="form-control"
                   />
                 </td>
@@ -60,33 +65,15 @@
 
             <tr>
               <div class="form-group">
-                <input type="hidden" th:field="*{id}" />
-
-                <td><label for="nombre">Email del Administrador</label></td>
+                <td><label for="status">Status</label></td>
                 <td>
-                  <input
-                    th:field="*{email}"
-                    id="email_admin"
-                    placeholder="Escribe tu e-mail"
-                    type="email"
-                    class="form-control"
-                  />
-                </td>
-              </div>
-            </tr>
-            <tr>
-              <div class="form-group">
-                <td>
-                  <label for="nombre">Contraseña del Administrador</label>
-                </td>
-                <td>
-                  <input
-                    th:field="*{password}"
-                    id="psswd_admin"
-                    placeholder="Escribe la contraseña"
-                    type="password"
-                    class="form-control"
-                  />
+                  <select id="status" name="status">
+                    <option
+                      th:each="s: ${Status}"
+                      th:value="${s}"
+                      th:text="${s}"
+                    ></option>
+                  </select>
                 </td>
               </div>
             </tr>
@@ -98,10 +85,14 @@
                 Actualizar
               </button>
             </td>
-
             <td>
               <button class="btn btn-info" title="Deshacer" type="reset">
                 Deshacer
+              </button>
+            </td>
+            <td>
+              <button class="btn btn-warning" title="Limpiar" type="reset">
+                Limpiar
               </button>
             </td>
           </table>
