--- a/src/main/resources/templates/formCategory.html
+++ b/src/main/resources/templates/formCategory.html
@@ -74,7 +74,7 @@
             <div class="mx-auto col-sm-8 main-section" id="myTab" role="tablist">
                 <ul class="nav nav-tabs justify-content-end">
                     <li class="nav-item">
-                        <a class="nav-link active" id="list-tab" data-toggle="tab" href="#list" role="tab" aria-controls="list" aria-selected="false">Administradores</a>
+                        <a class="nav-link active" id="list-tab" data-toggle="tab" href="#list" role="tab" aria-controls="list" aria-selected="false">Categorías</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="form-tab" data-toggle="tab" href="#form" role="tab" aria-controls="form" aria-selected="true">Nuevo</a>				   	
@@ -156,7 +156,7 @@
                                         </script>
                                     </div>
                                     <div class="form-group row">
-                                        <label class="col-lg-3 col-form-label form-control-label">Nombre Categoria</label>
+                                        <label class="col-lg-3 col-form-label form-control-label">Nombre</label>
                                         <div class="col-lg-9">
                                             <input
                                                 th:field="*{name}"
