--- a/src/main/resources/templates/formClient.html
+++ b/src/main/resources/templates/formClient.html
@@ -19,16 +19,16 @@
               href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
         <script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 
-        <!-- Nuestro css-->
-        <link rel="stylesheet" type="text/css" href="static/css/user-form.css"
-              th:href="@{/css/user-form.css}">
-
         <!-- DATA TABLE -->
         <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
         <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css">	
         <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
 
+        <!-- Nuestro css-->
+        <link rel="stylesheet" type="text/css" href="static/css/user-form.css"
+              th:href="@{/css/user-form.css}">
+        
         <script type="text/javascript">
             $(document).ready(function () {
                 //Asegurate que el id que le diste a la tabla sea igual al texto despues del simbolo #
@@ -61,6 +61,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/formReservation">Reservas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/formRatingReservation">Calificaciones</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/formAdmin">Administradores</a>
@@ -142,7 +145,7 @@
                                 <form th:object="${client}" th:action="@{/formClient/save}" class="form" method="post">
                                     <!-- Log de erorres de validacion-->
                                     <div th:object="${client}" th:if="${#fields.hasErrors('*')}" class="errorblock">
-                                        <ul th:if="${#fields.hasErrors('*')}" class="alert alert-danger" role="alert">
+                                        <ul class="alert alert-danger" role="alert">
                                             <li th:each="error: ${#fields.errors('*')}" th:text="${error}" style="margin-left: 20px"></li>
                                         </ul>
                                         <script>
